fix some more minor typos

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -19,7 +19,7 @@ A metric can be defined as the science of indirect measurement.
         in the software code
         \item Source Code Analysis - Tools that determine whether 
         code adheres to specified set of rules. Common 
-        examples are PMD and FindBugs$^{TM}$ \cite{PMD, Findbugs}.
+        examples are PMD\footnote{PMD is a source code analysis product.  It is not an acronym.} and FindBugs$^{TM}$ \cite{PMD, Findbugs}.
     \end{itemize}
 
 Data Driven Software Engineering not Data Driven Software Development
@@ -59,7 +59,7 @@ as well as \cite{florac1999,kaplan1992}.
 
 \subsection{BALANCED SCORECARD}
 
-A common technique for organization to measure themselves is a balanced scorecard.
+A common technique for organizations to measure themselves is a balanced scorecard.
 A \textit{balanced scorecard} must contain the following six
 characteristics.
 \begin{enumerate}
@@ -72,7 +72,7 @@ characteristics.
 \end{enumerate}
 
 Balanced scorecards are great for displaying the important information about
-and organization.  However, a balanced scorecard does not specify what
+an organization.  However, a balanced scorecard does not specify what
 exactly needs to be tracked.  It is also not specific to an SDO and 
 it does not produce a single number.
 
