--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -450,7 +450,7 @@ not overly sensitive to small changes in the inputs.\\
 
 \bottomrule
 
-\caption{3 IMPORTANT QUESTIONS FOR SOFTWARE ANALYTICS AND MPI}
+\caption{IMPORTANT QUESTIONS FOR SOFTWARE ANALYTICS AND MPI}
 \label{tab:questions}
 \end{longtable}
 
