--- a/references.bib
+++ b/references.bib
@@ -754,6 +754,23 @@
     address = {Berlin, Heidelberg},
     keywords = {software process mining and management},
 } 
+@inproceedings{Ramler2006,
+    author = {Ramler, Rudolf and Wolfmaier, Klaus},
+    title = {Economic Perspectives in Test Automation: Balancing Automated and Manual Testing with Opportunity Cost},
+    booktitle = {Proceedings of the 2006 International Workshop on Automation of Software Test},
+    series = {AST '06},
+    year = {2006},
+    isbn = {1-59593-408-1},
+    location = {Shanghai, China},
+    pages = {85--91},
+    numpages = {7},
+    url = {http://doi.acm.org/10.1145/1138929.1138946},
+    doi = {10.1145/1138929.1138946},
+    acmid = {1138946},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {automated testing, benefits and costs of automation, manual testing, testing economics},
+} 
 @incollection{Ruhe1997,
     year={1997},
     isbn={978-3-540-63223-8},
