working on the quality element

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -1,7 +1,7 @@
 \documentclass[SDSUThesis.tex]{subfiles} 
 \begin{document}
 
-\section{MEASURING A SDO}
+\section{MEASURING AN SDO}
 
 Anything can be measured \cite{Hubbard2010}.  An SDO
 how numerous metrics.
