--- a/references.bib
+++ b/references.bib
@@ -477,6 +477,15 @@
     publisher = {McGraw-Hill, Inc.},
     address = {Hightstown, NJ, USA},
 } 
+@book{Jones2009,
+    author = {Jones, Capers},
+    title = {Software Engineering Best Practices},
+    year = {2010},
+    isbn = {007162161X, 9780071621618},
+    edition = {1},
+    publisher = {McGraw-Hill, Inc.},
+    address = {New York, NY, USA},
+} 
 @misc{Jones2012,
     author= {Jones, Capers},
     year = {2012},
@@ -493,14 +502,13 @@
     howpublished = {\url{http://goo.gl/QUsvlw}},
     note = {Namecook Analytics Blog, accessed 01-Jan-2015  }
 }
-@book{Jones2009,
+@book{Jones2013b,
     author = {Jones, Capers},
-    title = {Software Engineering Best Practices},
-    year = {2010},
-    isbn = {007162161X, 9780071621618},
-    edition = {1},
-    publisher = {McGraw-Hill, Inc.},
-    address = {New York, NY, USA},
+    title = {The Technical and Social History of Software Engineering},
+    year = {2013},
+    isbn = {0321903420, 9780321903426},
+    edition = {1st},
+    publisher = {Addison-Wesley Professional},
 } 
 @inproceedings{Jorgensen2013,
     author = {J{\o}rgensen, Magne},
