--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -214,11 +214,14 @@ The WHAT of SDLC - These are the steps of SDLC that need to be completed for eac
     to complete \cite{DeMarco2009}.
     Software projects are commonly behind schedule and over budget \cite{Lehtinen2014, 
     Charette2005,Jorgensen2013,Ichu2012} with nearly 20\% of projects
-    in the United States still failing \cite{Emam2008}. Organizations need a better
+    in the United States still failing \cite{Emam2008}. 
+    As of 2015, Software engineering is 
+    still awaiting the professional status of more established fields such
+    as medicine, law, and general engineering \cite{Jones2013b}. 
+    Organizations need a better
     technique to understand the past performance so they can better 
-    predict the future performance.
-    
-    See this book \cite{Jones2013b}
+    predict the future performance.  Proper measurement will be essential
+    to solidifying software engineering as certified profession.  
 
 \subsection{TERMINOLOGY}
 
