--- a/references.bib
+++ b/references.bib
@@ -502,10 +502,11 @@
     howpublished = {\url{http://goo.gl/QUsvlw}},
     note = {Namecook Analytics Blog, accessed 01-Jan-2015  }
 }
-@book{Jones2013b,
+@inbook{Jones2013b,
     author = {Jones, Capers},
     title = {The Technical and Social History of Software Engineering},
     year = {2013},
+    chapter={10},
     isbn = {0321903420, 9780321903426},
     edition = {1st},
     publisher = {Addison-Wesley Professional},
