--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -432,9 +432,11 @@
     presented in this work will address both the 3 main focus areas and
     the 3 important questions of software analytics.
 
-    One of the software analytic techniques focuses specifically 
+    Lavazza, Morasca, Taibi, and Tosi focus specifically 
     on the source code; analyzing the 
     complexity, size, and coupling \cite{Tosi2012}. 
+    They created a theoretical framework
+    for dynamic measurements instead of traditional static measures.
     Letier and Fitzgerald discuss how to choose the 
     correct tools and techniques to analyze
     software data \cite{Letier2013}.  A goal model is 
