working on availability

--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -227,7 +227,8 @@ The WHAT of SDLC - These are the steps of SDLC that need to be completed for eac
 
 \begin{description}
 
-    \item[App] (Application) - a software system or a collection of other apps, item[Project] - A body of work involving zero or more apps in preparation for a release, infrastructure upgrades can be a project but no specific app is involved
+    \item[App] (Application) - a software system or a collection of other applications 
+    \item[Project] - A body of work involving zero or more apps in preparation for a release, infrastructure upgrades can be a project but no specific app is involved
     \item[Release] - A collection of projects being put in production on a specified date
     \item[SIT]   (Systems Integration Testing) - The initial step of testing
         after the development phase of the SDLC.  This is typically 
