--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,16 @@
     publisher={MIPRO}
     url={http://www.ericsson.com/hr/etk/dogadjanja/mipro_2008/1220.pdf}
 }
+@inbook{Aulet2013,
+    author = {Bill Aulet},
+    title = {Disciplined Entrepreneurship: 24 Steps to a Successful Startup},
+    year = {2013},
+    isbn = {1-118692-28-4},
+    chapter = {STEP 19: Calculate the Cost of Customer Acquisition (COCA)}
+    edition = {1st},
+    publisher = {John Wiley & Sons},
+    address = {Hoboken, NJ, USA}
+}
 @misc{Beck2001,
     added-at = {2014-10-27T11:39:05.000+0100},
     author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
