--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -230,11 +230,11 @@
             performance against that SLA.  The following section will outline to data needed to properly
             calculate an SLA and the data needed to calculate the MPI score for availability.
             
-            Special Note: The System ID for availability does not have to be the same
+            Special Note: The Service ID for availability does not have to be the same
             as the Application ID for quality or any of the other elements.  Some 
             organizations have a one-to-one mapping between Applications being developed
-            and systems being deployed.  Others have more complex sceranios that require
-            multiple applications to be combined to form a system.  Then the availability
+            and services being deployed.  Others have more complex sceranios that require
+            multiple applications to be combined to form a service.  Then the availability
             of the system is tracked.
             
             \paragraph{AVAILABILITY DATA}
@@ -274,7 +274,7 @@
                     % \midrule
                     \endhead
                     
-                    System ID & String  & Required \\
+                    Service ID & String  & Required \\
                     \myrowcolour%
                     Frequency Date & Date & Required \\
                     Uptime & Float & Optional \\
@@ -321,7 +321,62 @@
                 \]
                 
         \subsubsection{SATISFACTION}
-            The satisfaction of the customer is also very important.  
+            The satisfaction of users, customers, and/or business partners is 
+            the third element to be measured.  This element is important because 
+            in an established business, retaining customers is less expensive
+            than actracting new customers \cite{Aulet2013}.  
+            Depending upon the type of SDO,
+            the customers may be internal or external to the organization.
+            If one element of MPI was to be rated as the most important, satisfaction
+            would be it.  Without satisfied customers, the rest of the measures do not matter.
+            For example, having a quality
+            application that is always available does not matter if it is not what the customer
+            wants.  Surveys are used to measure satisfaction for MPI.
+            
+            
+            \paragraph{SURVEYS}
+                Write possible survey questions here.
+                and explain the issues with surveys, see qualifier
+                
+           
+            The questions  are answered on a scale of 1 to 5 with 1 being 
+            \textbf{Strongly Misses Expectations} and 5 being \textbf{Strongly Exceeds
+            Expectations}.  
+            
+            \paragraph{SATISFACTION DATA}
+                \begin{longtable}{@{}l rr rr}
+                    \toprule%
+                     \centering%
+                     {\bfseries Column Name}
+                     & {\bfseries Data Type}
+                     &  \\
+                    
+                    \cmidrule[0.4pt](r{0.125em}){1-1}%
+                    \cmidrule[0.4pt](lr{0.125em}){2-2}%
+                    \cmidrule[0.4pt](l{0.125em}){3-3}%
+                    % \midrule
+                    \endhead
+                    
+                    Question ID & String  & Required \\
+                    \myrowcolour%
+                    Question Text & String  & Optional \\
+                    Respondent ID & String & Optional \\
+                    \myrowcolour%
+                    Frequency Date & Date & Required \\
+                    Response & Integer & Required \\
+                    \myrowcolour%
+                    Response Date & Date & Optional \\
+                    Application ID & String & Optional \\
+                    
+                    \bottomrule
+                    
+                    \caption{SATISFACTION DATA NEEDED FOR MPI}
+                    \label{tab:satisfaction}
+                \end{longtable}
+            
+            \paragraph{SATISFACTION FORMULA}
+            
+            
             The following is an algorithm to calculate the satisfaction of software.
             \[
                 S_2 = \frac{\sum^n_{i=1}\left( \frac{\sum^m_{j=1}a_{ij}- \frac{min + max}{2}}{m}  \right)}{n}
@@ -335,36 +390,7 @@
             \item $max$ maximum score for a question
             \end{itemize}
             
-            \begin{longtable}{@{}l rr rr}
-            % pairs: absolute number (percentage)
             
-            \toprule%
-             \centering%
-             {\bfseries Column Name}
-             & {\bfseries Data Type}
-             &  \\
-            
-            \cmidrule[0.4pt](r{0.125em}){1-1}%
-            \cmidrule[0.4pt](lr{0.125em}){2-2}%
-            \cmidrule[0.4pt](l{0.125em}){3-3}%
-            % \midrule
-            \endhead
-            
-            Question ID & String  & Required \\
-            \myrowcolour%
-            Question Text & String  & Optional \\
-            Application ID & String & Required \\
-            \myrowcolour%
-            Frequency Date & Date & Required \\
-            Response & Integer between min and max  & Required \\
-            \myrowcolour%
-            Response Date & Date & Optional \\
-            
-            \bottomrule
-            
-            \caption{SATISFACTION DATA NEEDED FOR MPI}
-            \label{tab:satisfaction}
-            \end{longtable}
 
 
         \subsubsection{SCHEDULE}  
